--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1> Odin Recipes  </h1>
     <ul>
-        <li><a href="recipes/Chowmein.html"> Recipe Title</a></li>
-        <li><a href="recipes/momo.html">Recipe Title</a></li>
-        <li><a href="recipes/sausages.html"> Recipe Title</a></li>
+        <li><a href="recipes/Chowmein.html"> Chowmein Recipe</a></li>
+        <li><a href="recipes/momo.html">Sausage Recipe</a></li>
+        <li><a href="recipes/sausages.html"> Momo Recipe</a></li>
 
     </ul>
 </body>
